<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context="com.RolandAssoh.stopgalere.ci.AboutActivity">

    <ImageView
        android:id="@+id/abtLogoImageId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/abtAppNmeTextId"
        android:layout_below="@+id/abtLogoImageId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textSize="@dimen/item_mobile_size"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/abtVersionTextId"
        android:layout_below="@+id/abtAppNmeTextId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_version"
        android:textSize="@dimen/item_mobile_size"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/abtDevelopper"
        android:text="@string/app_developper"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/abtVersionTextId"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/abtSloganTextId"
        android:layout_below="@+id/abtDevelopper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:text="@string/app_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/abtRNotifCBoxId"
        android:text="@string/receive_notif"
        android:layout_below="@id/abtSloganTextId"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/abtCGUTextId"
        android:layout_below="@id/abtRNotifCBoxId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_cgu"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <WebView
        android:id="@+id/abtCGUWSiteId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/abtCGUTextId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</RelativeLayout>
