<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp" >


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_wizard_shop" />

    <com.font.RobotoTextView
        android:id="@+id/wizard_text_cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/wizard_cv"
        android:visibility="visible"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:typeface="robotoLight" />

    <com.font.RobotoTextView
        android:id="@+id/wizard_text_lemotis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/wizard_lemotivation"
        android:visibility="gone"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:typeface="robotoLight" />

    <com.font.RobotoTextView
        android:id="@+id/wizard_text_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/wizard_gps"
        android:visibility="gone"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:typeface="robotoLight" />

    <ImageView
        android:id="@+id/wizard_image_map"
        android:layout_below="@id/wizard_text_gps"
        android:src="@drawable/img_wizard_map"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="150dp" />


</RelativeLayout>